updated authors in title

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <h1><a href="http://github.com/dvandok/userspace-package-management">userspace-package-management</a>
-      <span class="small">by <a href="http://github.com/dvandok">dvandok</a></span></h1>
+      <span class="small">by <a href="http://github.com/dvandok">Dennis van Dok and Mark Santcroos</a></span></h1>
 
     <div class="description">
       Handle packages for grid systems entirely in user space, based on NetBSD pkgsrc
