fixed h1 removed contact (authors suffices)

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/dvandok/userspace-package-management">userspace-package-management</a>
-      <span class="small">by <a href="http://github.com/dvandok">Dennis van Dok and Mark Santcroos</a></span></h1>
+    <h1><a href="http://github.com/dvandok/userspace-package-management">userspace-package-management</a></h1>
 
     <div class="description">
       Handle packages for grid systems entirely in user space, based on NetBSD pkgsrc
@@ -61,8 +60,6 @@ This work was first presented during the EGI User Forum 2011 in Vilnius, Lithuan
 <p>Apache License 2.0 (http://www.apache.org/licenses/LICENSE-2.0)</p>
 <h2>Authors</h2>
 <p>Dennis van Dok (dennisvd@nikhef.nl)<br/>Mark Santcroos (m.a.santcroos@amc.uva.nl)<br/><br/><br/>      </p>
-<h2>Contact</h2>
-<p>Dennis van Dok (dvandok@gmail.com)<br/>      </p>
 
 
     <h2>Download</h2>
